Fix BoxedPrimitiveConstructor errors